# sprint-06-ai-engineering-bootcamp

./: .env.example  .gitignore  Dockerfile.fastapi  Dockerfile.streamlit  Makefile  README.md  docker-compose.yml  init-db.sh  pyproject.toml
evals/: eval_coordinator_agent.py  eval_retriever.py
evals/datasets/: coordinator_agent.py
notebooks/: 01-lllm-apis.ipynb  02-RAG-preprocessing.ipynb  03-evaluation-dataset.ipynb  04-hybrid-search.ipynb  05-LangGraph-intro.ipynb  06-LangGraph-single-turn-assitant.ipynb  07-LangGraph-multi-turn-assistant.ipynb  08-multiple-tools.ipynb  09-Human-feedback.ipynb  10-MCP.ipynb  11-Router.ipynb  12-ShoppingCart-Tools.ipynb  13-ShoppingCart-Agent.ipynb  14-Coordinator-Agent.ipynb  15-evaluation-Coordinator.ipynb  16-litellm-router.ipynb  17-CI-Quality-Gate.ipynb
sql/: shopping_cart_table.sql
src/api/: main.py
src/api/api/: endpoints.py  models.py
src/api/core/: config.py
src/api/processors/: submit_feedback.py
src/api/rag/: agents.py  graph.py  tools.py
src/api/rag/prompts/: coordinator_agent.yaml  product_qa_agent.yaml  shopping_cart_agent.yaml
src/api/rag/utils/: utils.py
src/chatbot_ui/: streamlit_app.py
src/chatbot_ui/core/: config.py
src/items_mcp_server/: main.py  utils.py
src/items_mcp_server/core/: config.py
src/reviews_mcp_server/: main.py  utils.py
src/reviews_mcp_server/core/: config.py
